--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
 	id 'java'
 	id 'eclipse'
@@ -8,9 +7,15 @@ sourceCompatibility = 17
  
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
  
 dependencies {	
+    implementation('com.github.blurite:pathfinder:2.1.9')
+    
+	// https://mvnrepository.com/artifact/org.openjdk.nashorn/nashorn-core
+	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
+
 	// https://github.com/Displee/rs-cache-library
 	implementation 'com.displee:rs-cache-library:6.9-RC2'
 	
