--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.9.1'	
 	
 	// https://mvnrepository.com/artifact/io.netty/netty-all
-	implementation 'io.netty:netty-all:4.1.36.Final'
+	implementation 'io.netty:netty-all:4.1.80.Final'
+
+	implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
 
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
